Aula do dia 11-03-2021

--- a/src/Aula 03 - Loops.ipynb
+++ b/src/Aula 03 - Loops.ipynb
@@ -9,60 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Repetição com while (enquanto condição for verdadeira)\n",
     "# só entra na estrutura se a condição for verdadeira\n",
-    "# a condição do laço de repatiç]ao precisa ser modificada em algum momento da repetição\n",
+    "# a condição do laço de repatição precisa ser modificada em algum momento da repetição\n",
     "\n",
-    "cont = 0\n",
+    "cont = 11\n",
     "\n",
-    "while cont < 10:\n",
-    "    print(cont)\n",
-    "    cont = cont + 1    "
+    "while cont <= 10:\n",
+    "    print('Número: ' + str(cont))\n",
+    "    cont = cont + 1  \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cont = 1\n",
     "\n",
@@ -73,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -96,10 +65,10 @@
     "\n",
     "while ctd < 5:\n",
     "    print(ctd)\n",
-    "    ctd += 1\n",
+    "    ctd += 1 #\n",
     "else:\n",
     "    print('Acabou loop')\n",
-    "\n",
+    "    \n",
     "# Quando a condição de repetição não for mais atendida, então será executado o que estiver no ELSE.\n",
     "# cláusula ELSE não é obrigatória."
    ]
@@ -113,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -147,14 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "n\n",
+      "á\n",
+      "l\n",
+      "i\n",
+      "s\n",
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "# Percorrer strings\n",
-    "texto = 'Análise e Desenvolvimento de Sistemas'\n",
+    "texto = 'Análise'\n",
     "\n",
     "for let in texto:\n",
     "    print(let)"
@@ -169,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -179,43 +162,43 @@
       "1\n",
       "2\n",
       "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "# Range cria uma faixa de intervalos\n",
-    "for n in range(1, 10):\n",
+    "for n in range(1, 5):\n",
     "    print(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
+      "2\n",
       "5\n",
-      "7\n",
-      "9\n"
+      "8\n"
      ]
     }
    ],
    "source": [
     "# Pode ser passado o parâmetro PASSO\n",
-    "for n in range(1, 10, 2):\n",
+    "for n in range(2, 11, 3):\n",
     "    print(n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
